Fix the issue where the yasr results table doesn't overflow horizontally when there are a lots of columns in the result.

--- a/src/css/sparql-editor.css
+++ b/src/css/sparql-editor.css
@@ -45,6 +45,10 @@
     color: #fff;
 }
 
+.sparql-editor-view #query-editor .dataTables_wrapper {
+    overflow-x: scroll;
+}
+
 .keyboard-shortcuts-dialog-wrapper {
     height: 20px;
     line-height: 20px;
